--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -58,7 +65,8 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -128,9 +136,13 @@ img {
 /*===== LAYOUT =====*/
 .bd-grid {
   max-width: 1024px;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 100%;
   grid-template-columns: 100%;
-  column-gap: 2rem;
+  -webkit-column-gap: 2rem;
+     -moz-column-gap: 2rem;
+          column-gap: 2rem;
   width: calc(100%-2rem);
   margin-left: var(--mb-2);
   margin-right: var(--mb-2);
@@ -143,15 +155,22 @@ img {
   left: 0;
   z-index: var(--z-fixed);
   background-color: var(--first-color-lighten);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 /*===== NAV =====*/
 .nav {
   height: var(--header-height);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .nav__menu {
@@ -161,9 +180,15 @@ img {
   width: 90%;
   height: 100vh;
   padding: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: var(--first-color);
+  -webkit-transition: .5s;
+  -o-transition: .5s;
   transition: .5s;
 }
 
@@ -185,6 +210,8 @@ img {
   text-transform: uppercase;
   color: var(--first-color-lighten);
   font-weight: var(--font-bold);
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -211,13 +238,24 @@ img {
 /*===== HOME =====*/
 .home__container {
   height: calc(100vh - var(--header-height));
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .home__data {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
   text-align: center;
 }
@@ -258,6 +296,8 @@ img {
 }
 
 .home__social-link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   background-color: var(--first-color);
   color: var(--first-color-lighten);
@@ -265,6 +305,8 @@ img {
   border-radius: 50%;
   padding: .40rem;
   margin: 0 var(--mb-1);
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -280,6 +322,8 @@ img {
   padding: 1rem 2rem;
   font-weight: var(--font-semi-bold);
   border-radius: 0.5rem;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -328,8 +372,12 @@ img {
 }
 
 .about__information-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-left: 1.5rem;
   margin-bottom: var(--mb-3);
 }
@@ -365,8 +413,12 @@ img {
 
 .skills__data {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0 var(--mb-2);
   margin-bottom: var(--mb-4);
 }
@@ -406,7 +458,11 @@ img {
 }
 
 .education__content {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr -webkit-max-content 1fr;
+  -ms-grid-columns: 1fr max-content 1fr;
+  grid-template-columns: 1fr -webkit-max-content 1fr;
   grid-template-columns: 1fr max-content 1fr;
 }
 
@@ -429,7 +485,8 @@ img {
 
 .education__time {
   padding: 0 1rem;
-  justify-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 .education__rounder {
@@ -444,7 +501,9 @@ img {
 .education__rounder::before {
   content: '';
   position: absolute;
-  transform: translate(-4px, -4px);
+  -webkit-transform: translate(-4px, -4px);
+      -ms-transform: translate(-4px, -4px);
+          transform: translate(-4px, -4px);
   width: 20px;
   height: 20px;
   border: 1px solid var(--first-color);
@@ -456,7 +515,9 @@ img {
   height: 90%;
   width: 2px;
   background-color: var(--first-color);
-  transform: translate(5px, -4px);
+  -webkit-transform: translate(5px, -4px);
+      -ms-transform: translate(5px, -4px);
+          transform: translate(5px, -4px);
 
 }
 
@@ -491,6 +552,8 @@ img {
 .services__icon,
 .services__description,
 .services__title {
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -536,7 +599,8 @@ img {
 
 .project__img {
   width: 220px;
-  justify-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 /* ===== WORKS =====*/
@@ -557,17 +621,30 @@ img {
   bottom: -100%;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: var(--text-color);
   opacity: 0.7;
   border-radius: 0.5rem;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 
 .works__link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   font-size: 1.5rem;
   background-color: var(--first-color-lighten);
@@ -600,6 +677,30 @@ img {
   font-size: var(--normal-font-size);
   margin-bottom: var(--mb-2);
   border-radius: 0.5rem;
+}
+
+.contact ::-webkit-input-placeholder {
+  color: var(--first-color-dark);
+  font-family: var(--body-font);
+  font-weight: var(--font-medium);
+}
+
+.contact ::-moz-placeholder {
+  color: var(--first-color-dark);
+  font-family: var(--body-font);
+  font-weight: var(--font-medium);
+}
+
+.contact :-ms-input-placeholder {
+  color: var(--first-color-dark);
+  font-family: var(--body-font);
+  font-weight: var(--font-medium);
+}
+
+.contact ::-ms-input-placeholder {
+  color: var(--first-color-dark);
+  font-family: var(--body-font);
+  font-weight: var(--font-medium);
 }
 
 .contact ::placeholder {
@@ -652,6 +753,8 @@ img {
 }
 
 .footer__link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   background-color: var(--first-color);
   color: var(--first-color-lighten);
@@ -659,6 +762,8 @@ img {
   border-radius: 50%;
   padding: .40rem;
   margin: 0 var(--mb-1);
+  -webkit-transition: .3s;
+  -o-transition: .3s;
   transition: .3s;
 }
 
@@ -688,6 +793,7 @@ img {
   .works__container,
   .contact__container,
   .contact__input {
+    -ms-grid-columns: (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -717,6 +823,7 @@ img {
 
   .project__container {
     background-color: var(--first-color);
+    -ms-grid-columns: 2fr 1.2fr;
     grid-template-columns: 2fr 1.2fr;
     padding: 0 2rem;
     border-radius: 0.5rem;
@@ -733,12 +840,16 @@ img {
 
   .project__img {
     width: 230px;
-    align-self: flex-end;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
   }
 
   .contact__input {
+    display: -ms-grid;
     display: grid;
-    column-gap: 1.5rem;
+    -webkit-column-gap: 1.5rem;
+       -moz-column-gap: 1.5rem;
+            column-gap: 1.5rem;
   }
 
   .contact__info {
@@ -799,42 +910,68 @@ img {
 
   .services__container,
   .works__container {
+    -ms-grid-columns: (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 /***** animation ****/
 .drop {
-  animation-duration: 1s;
-  animation-timing-function: ease;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-fill-mode: none;
-  animation-play-state: running;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: none;
+          animation-fill-mode: none;
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
   position: relative;
 }
 .nodrop{
-  animation-name: none !important;
+  -webkit-animation-name: none !important;
+          animation-name: none !important;
   opacity: 0;
   
 }
 
 .toBottom {
-  animation-name: movetoBottom;
+  -webkit-animation-name: movetoBottom;
+          animation-name: movetoBottom;
 }
 
 .toTop {
-  animation-name: movetoTop;
+  -webkit-animation-name: movetoTop;
+          animation-name: movetoTop;
 }
 
 .toRight {
-  animation-name: movetoRight;
+  -webkit-animation-name: movetoRight;
+          animation-name: movetoRight;
 }
 
 .toLeft {
 
-  animation-name: movetoLeft;
+  -webkit-animation-name: movetoLeft;
+
+          animation-name: movetoLeft;
+}
+
+@-webkit-keyframes movetoBottom {
+  from {
+    top: -100px;
+    opacity: 0;
+  }
+
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 @keyframes movetoBottom {
@@ -845,6 +982,18 @@ img {
 
   to {
     top: 0;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes movetoTop {
+  from {
+    bottom: -100px;
+    opacity: 0;
+  }
+
+  to {
+    bottom: 0;
     opacity: 1;
   }
 }
@@ -861,6 +1010,18 @@ img {
   }
 }
 
+@-webkit-keyframes movetoRight {
+  from {
+    left: -100px;
+    opacity: 0;
+  }
+
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
+
 @keyframes movetoRight {
   from {
     left: -100px;
@@ -869,6 +1030,18 @@ img {
 
   to {
     left: 0;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes movetoLeft {
+  from {
+    right: -100px;
+    opacity: 0;
+  }
+
+  to {
+    right: 0;
     opacity: 1;
   }
 }
